@@ -274,6 +274,9 @@ ILboolean ilIsValidExrL(const void *Lump, ILuint Size);
 ILboolean ilLoadExr(ILconst_string FileName);
 ILboolean ilLoadExrF(ILHANDLE File);
 ILboolean ilLoadExrL(const void *Lump, ILuint Size);
+ILboolean ilSaveExr(ILconst_string FileName);
+ILboolean ilSaveExrF(ILHANDLE File);
+ILboolean ilSaveExrL(void *Lump, ILuint Size);
 ILboolean ilIsValidGif(ILconst_string FileName);
 ILboolean ilIsValidGifF(ILHANDLE File);
 ILboolean ilIsValidGifL(const void *Lump, ILuint Size);
