@@ -123,6 +123,9 @@
 	* il_io.c (ilLoadF): Uncommented ilLoadJp2F.
 	* il_dds-save.c (CompressTo565): Changed 24-bit to 16-bit code based on Charles Bloom's rant.
 	* il_dds.c (DxtcReadColor/DxtcReadColors): Changed conversion to copy high bits to lowest bits as well.
+	* il_io.c: Reenabled PhotoCD support.
+	* il_pcd.c (iLoadPcdInternal): Added check for end-of-file.
+	* il_exr.c: Added EXR saving functions.
 	
 2009-01-15 Matěj Týč <bubla@sf.net>
 	* il_io.h, include/IL/il.h, il_states.h: Changed some normal strings to constant
